cluster/apps/rtorrent-rutorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtorrent-rutorrent
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtorrent-rutorrent
  template:
    metadata:
      labels:
        app: rtorrent-rutorrent
    spec:
      containers:
      - name: rtorrent-rutorrent
        image: diameter/rtorrent-rutorrent:latest
        ports:
        - containerPort: 80    # web UI
        - containerPort: 49160
          protocol: UDP
        - containerPort: 49161
          protocol: TCP
        volumeMounts:
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: downloads
        hostPath:
          path: "/mnt/data/movies"
          type: Directory
